terraform/main.tf
terraform {
  required_providers {
    google = {
      source  = "hashicorp/google"
      version = "~> 5.0"
    }
  }
}

provider "google" {
  project = "go-url-shortener-486311"
  region  = "us-central1"
  zone    = "us-central1-a"
}

# Network
resource "google_compute_network" "vpc" {
  name = "go-app-network"
}

# HTTP for others
resource "google_compute_firewall" "allow_http" {
  name    = "allow-http"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

  source_ranges = ["0.0.0.0/0"]
}

# SSH MY IP
resource "google_compute_firewall" "allow_ssh" {
  name    = "allow-ssh"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["${var.my_ip}/32"]
}

# Secure SSH (GCP internal)
resource "google_compute_firewall" "allow_iap_ssh" {
  name    = "allow-iap-ssh"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  # Google's IAP IP range
  source_ranges = ["35.235.240.0/20"] 
}

# Static IP
resource "google_compute_address" "static_ip" {
  name = "url-shortener-static-ip"
}

# Server
resource "google_compute_instance" "vm" {
  name         = "go-url-shortener"
  machine_type = "e2-micro"
  tags         = ["http-server"]

  boot_disk {
    initialize_params { image = "ubuntu-os-cloud/ubuntu-2204-lts" }
  }

  network_interface {
    network = google_compute_network.vpc.name
    access_config {
      nat_ip = google_compute_address.static_ip.address
    }
  }

  metadata_startup_script = "curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh && curl -sSO https://dl.google.com/cloudagents/add-google-cloud-ops-agent-repo.sh && bash add-google-cloud-ops-agent-repo.sh --also-install"

  service_account {
    scopes = ["cloud-platform"]
  }
}

# Return IP of the cloud server
output "ip" {
  value = google_compute_address.static_ip.address
}
